--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,17 +1,36 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "ntp-client build",
+            "label": "debug",
             "type": "shell",
-            "command": "gcc",
-            "args": ["-g", "-o", "ntp-client", "client.c"],
+            "command": "",
+            "args": ["g++","-g", "${relativeFile}", "-o","a.exe"]
+        },
+        {
+            "label": "Compile and run",
+            "type": "shell",
+            "command": "",
+            "args": [
+                "g++","-g", "${relativeFile}", "-o","${fileBasenameNoExtension}.out", "&&", "clear" , "&&" , "./${fileBasenameNoExtension}.out"
+            ],
             "group": {
                 "kind": "build",
-                "isDefault": true
+                "isDefault": true  
+            },
+            "problemMatcher": {
+                "owner": "cpp",
+                "fileLocation": ["relative", "${workspaceRoot}"],
+                "pattern": {
+                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
             }
-        }
+        },
+        
     ]
 }
